--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-light navbar-light shadow-lg py-3 py-lg-0 pl-3 pl-lg-5">
                 <a href="" class="navbar-brand">
-                    <h1 class="m-0 text-primary"><span class="text-dark">Poli</span>Academy</h1>
+                    <h1 class="m-0 text-primary"><span class="text-dark">POLI</span>STEM</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -210,14 +210,41 @@
                         <h1 class="mb-3">Mision y Vision</h1>
                         <p><strong>Mision:</strong> Nuestra misión es establecer y expandir un programa de tutorías en colaboración con universidades, que permita brindar apoyo académico a estudiantes en necesidad. Nos enfocamos en reconocer y captar tanto a estudiantes como a colaboradores que deseen apadrinar y apoyar a nuestros estudiantes. Buscamos construir una red de apoyo educativa que facilite el acceso a oportunidades de aprendizaje y fomente el crecimiento académico a través de la tutoría y el apadrinamiento.</p>
 						<p><strong>Vision:</strong> Aspiramos a convertirnos en una comunidad educativa líder a nivel nacional, que brinde oportunidades de aprendizaje a estudiantes con dificultades y fomente el crecimiento personal y académico. Buscamos expandir nuestra influencia a diversos sectores del país, inspirar a más personas a unirse a TUTORIASPOLI y participar activamente en la educación, ya sea como tutores o mentores que apadrinen a los estudiantes de nuestra comunidad.</p>
-                        <div class="row mb-4">
+                        <!--<div class="row mb-4">
                             <div class="col-6">
                                 <img class="img-fluid" src="img/poli.1.jpg" alt="">
                             </div>
                             <div class="col-6">
-                                <img class="img-fluid" src="img/poli.2.1.jpg" alt="">
+                                <img class="img-fluid" src="img/teaching-teacher-book.jpg" alt="">
                             </div>
-                        </div>
+                        </div>-->
+						
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Imágenes del mismo tamaño</title>
+    <style>
+        .img-same-size {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+        }
+    </style>
+</head>
+<body>
+    <div class="row mb-4">
+        <div class="col-6">
+            <img class="img-fluid img-same-size" src="img/poli.1.jpg" alt="">
+        </div>
+        <div class="col-6">
+            <img class="img-fluid img-same-size" src="img/teaching-teacher-book.jpg" alt="">
+        </div>
+    </div>
+</body>
+</html>
+
+ 
                         <a href="" class="btn btn-primary mt-1">Ver Mas</a>
                     </div>
                 </div>
@@ -271,7 +298,7 @@
 
 
     <!-- Destination Start -->
-    <div class="container-fluid py-5">
+    <!-- <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
             <div class="text-center mb-3 pb-3">
                 <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Curso de Matematicas</h6>
@@ -338,40 +365,148 @@
     <!-- Destination Start -->
 
 
-    <!-- Service Start -->
-    <div class="container-fluid py-5">
-        <div class="container pt-5 pb-3">
-            <div class="text-center mb-3 pb-3">
-                <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;"> S T E M </h5>
-                <h1>Materias enfocadas en las líneas STEM</h1>
-				<p class="m-0">STEM significa Ciencia, Tecnología, Ingeniería y Matemáticas, áreas fundamentales que impulsan la innovación y el desarrollo. A través de nuestro enfoque en STEM, ofrecemos a los estudiantes una educación integral que fomenta el pensamiento crítico y las habilidades necesarias para enfrentar los desafíos del futuro.</p>
+    
+<!-- Service Start -->
+<!--<div class="container-fluid py-5">
+    <div class="container pt-5 pb-3">
+        <div class="text-center mb-3 pb-3">
+            <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">S T E M</h5>
+            <h1>Materias enfocadas en las líneas STEM</h1>
+            <p class="m-0">
+                STEM significa Ciencia, Tecnología, Ingeniería y Matemáticas, áreas fundamentales que impulsan la innovación y el desarrollo. A través de nuestro enfoque en STEM, ofrecemos a los estudiantes una educación integral que fomenta el pensamiento crítico y las habilidades necesarias para enfrentar los desafíos del futuro.
+            </p>
+        </div>
+        <div class="row">
+            <!-- Cuadro de Ciencia -->
+            <!--<div class="col-lg-6 col-md-6 mb-4">
+                <div class="service-item bg-white text-center mb-2 py-5 px-4">
+                    <a href="destination.html">
+					<i class="fa fa-2x fa-microscope mx-auto mb-4"></i> 
+					</a>
+                    <h5 class="mb-2">CIENCIA</h5>
+                    <p class="m-0">
+                        En este apartado, los estudiantes aprenden a observar, investigar y comprender el mundo que los rodea. A través de la ciencia, desarrollan habilidades para formular hipótesis, analizar datos y resolver problemas utilizando métodos científicos.
+                    </p>
+                </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="service-item bg-white text-center mb-2 py-5 px-4">
-                        <i class="fa fa-2x fa-microscope mx-auto mb-4"></i>
-                        <h5 class="mb-2">CIENCIA</h5>
-                        <p class="m-0">En este apartado, los estudiantes aprenden a observar, investigar y comprender el mundo que los rodea. A través de la ciencia, desarrollan habilidades para formular hipótesis, analizar datos y resolver problemas utilizando métodos científicos.</p>
-                    </div>
+            <!-- Cuadro de Matemáticas -->
+            <!--<div class="col-lg-6 col-md-6 mb-4">
+                <div class="service-item bg-white text-center mb-2 py-5 px-4">
+                      <a href="destination.html"> 
+					<i class="fa fa-2x fa-calculator mx-auto mb-4"></i>
+					 </a>
+                    <h5 class="mb-2">MATEMÁTICAS</h5>
+                    <p class="m-0">
+                        En este apartado, los estudiantes desarrollan el pensamiento lógico y la capacidad de resolver problemas cuantitativos. A través de las matemáticas, comprenden conceptos abstractos y aprenden a aplicarlos en situaciones prácticas y cotidianas.
+                    </p>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="service-item bg-white text-center mb-2 py-5 px-4">
-                        <i class="fa fa-2x fa-laptop mx-auto mb-4"></i>
-                        <h5 class="mb-2">TECNOLOGIA</h5>
-                        <p class="m-0">La tecnología se enfoca en el uso de herramientas digitales y recursos innovadores. Los estudiantes adquieren conocimientos sobre el uso responsable de la tecnología, desarrollando habilidades prácticas para su vida académica y futura.</p>
-                    </div>
+            </div>
+	
+			
+            <!-- Cuadro de Tecnología -->
+            <!--<div class="col-lg-6 col-md-6 mb-4">
+                <div class="service-item bg-white text-center mb-2 py-5 px-4">
+                     <a href="destination.html"> 
+					<i class="fa fa-2x fa-laptop mx-auto mb-4"></i>
+                     </a>
+					<h5 class="mb-2">TECNOLOGÍA</h5>
+                    <p class="m-0">
+                        La tecnología se enfoca en el uso de herramientas digitales y recursos innovadores. Los estudiantes adquieren conocimientos sobre el uso responsable de la tecnología, desarrollando habilidades prácticas para su vida académica y futura.
+                    </p>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="service-item bg-white text-center mb-2 py-5 px-4">
-                        <i class="fa fa-2x fa-cogs mx-auto mb-4"></i>
-                        <h5 class="mb-2">INGIENERIA</h5>
-                        <p class="m-0">La ingeniería les enseña a los estudiantes a diseñar, construir y optimizar soluciones a problemas reales. Aprenden a aplicar el pensamiento creativo y lógico para crear proyectos que mejoren su entorno y la sociedad.</p>
-                    </div>
+            </div>
+            <!-- Cuadro de Ingeniería -->
+            <!--<div class="col-lg-6 col-md-6 mb-4">
+                <div class="service-item bg-white text-center mb-2 py-5 px-5">
+                     <a href="destination.html"> 
+					<i class="fa fa-2x fa-cogs mx-auto mb-4"></i>
+                     </a>
+					<h5 class="mb-2">INGENIERÍA</h5>
+                    <p class="m-0">
+                        La ingeniería les enseña a los estudiantes a diseñar, construir y optimizar soluciones a problemas reales. Aprenden a aplicar el pensamiento creativo y lógico para crear proyectos que mejoren su entorno y la sociedad.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Service End -->
+</div>-->
+<!-- Service End -->
+
+<!-- Service Start -->
+<div class="container-fluid py-5">
+    <div class="container pt-5 pb-3">
+        <div class="text-center mb-3 pb-3">
+            <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">S T E M</h5>
+            <h1>Materias enfocadas en las líneas STEM</h1>
+            <p class="m-0">
+                STEM significa Ciencia, Tecnología, Ingeniería y Matemáticas, áreas fundamentales que impulsan la innovación y el desarrollo. A través de nuestro enfoque en STEM, ofrecemos a los estudiantes una educación integral que fomenta el pensamiento crítico y las habilidades necesarias para enfrentar los desafíos del futuro.
+            </p>
+        </div>
+        <div class="row">
+            <!-- Cuadro de Ciencia -->
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="service-item bg-white text-center mb-2 py-5 px-4">
+                    <a href="destination.html">
+                        <i class="fa fa-2x fa-microscope mx-auto mb-4"></i> 
+                    </a>
+                    <h5 class="mb-2">CIENCIA</h5>
+                    <p class="m-0">
+                        En este apartado, los estudiantes aprenden a observar, investigar y comprender el mundo que los rodea. A través de la ciencia, desarrollan habilidades para formular hipótesis, analizar datos y resolver problemas utilizando métodos científicos.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Cuadro de Matemáticas -->
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="service-item bg-white text-center mb-2 py-5 px-4">
+                    <a href="destination.html"> 
+                        <i class="fa fa-2x fa-calculator mx-auto mb-4"></i>
+                    </a>
+                    <h5 class="mb-2">MATEMÁTICAS</h5>
+                    <p class="m-0">
+                        En este apartado, los estudiantes desarrollan el pensamiento lógico y la capacidad de resolver problemas cuantitativos. A través de las matemáticas, comprenden conceptos abstractos y aprenden a aplicarlos en situaciones prácticas y cotidianas.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Cuadro de Tecnología e Ingeniería -->
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="service-item bg-white text-center mb-2 py-5 px-4">
+                    <a href="destination.html">
+                        <i class="fa fa-2x fa-cogs mx-auto mb-4"></i>
+                    </a>
+                    <h5 class="mb-2">TECNOLOGÍA E INGENIERÍA</h5>
+                    <p class="m-0">
+                        Este apartado combina la tecnología y la ingeniería, permitiendo que los estudiantes aprendan a utilizar herramientas digitales y recursos innovadores para resolver problemas reales. Adquieren habilidades prácticas para diseñar y construir soluciones que optimicen su entorno y su vida futura, aplicando tanto el pensamiento lógico como creativo.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Service End -->
+
+<style>
+    .row {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .service-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+        min-height: 400px; /* Altura mínima para todos los cuadros */
+    }
+    .service-item h5 {
+        font-size: 1.5rem;
+    }
+    .service-item p {
+        flex-grow: 1;
+    }
+</style>
+
+
 
 
     <!-- Packages Start 
@@ -503,7 +638,7 @@
 
 
     <!-- Registration Start -->
-        <div class="container-fluid bg-registration py-5" style="margin: 90px 0;">
+       <div class="container-fluid bg-registration py-5" style="margin: 90px 0;">
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-7 mb-5 mb-lg-0">
@@ -540,8 +675,8 @@
                                         <option value="2">destination 1</option>
                                         <option value="3">destination 1</option>
                                     </select>
-                                </div>-->
-                                   <div>
+                                </div>
+                                   <div>-->
                                     <button class="btn btn-primary btn-block py-3" type="submit">Registrese Ahora</button>
                                 </div>
                             </form>
@@ -552,6 +687,11 @@
         </div>
     </div>--> 
     <!-- Registration End -->
+	
+
+
+
+
 
 
 
@@ -763,7 +903,7 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="" class="navbar-brand">
-                    <h1 class="text-primary"><span class="text-white">Poli</span>Academy</h1>
+                    <h1 class="text-primary"><span class="text-white">POLI</span>STEM</h1>
                 </a>
                 <p>Somos una comunidad digital dedicada a apoyar el aprendizaje de niños de bajos recursos. Ofrecemos tutorías en matemáticas y otros temas STEM (ciencia, tecnología, ingeniería y matemáticas), usando tecnología para facilitar el acceso al conocimiento y preparar a los jóvenes para un futuro mejor.</p>
                 <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Siguenos !!</h6>
