--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase mb-md-3">COMUNIDAD DIGITAL</h5>
-                            <h1 class="display-3 text-white mb-md-4">Descubre el mundo de las matematicas con nosotros</h1>
+                            <h1 class="display-3 text-white mb-md-4">Descubre el mundo de las líneas STEM con nosotros</h1>
                             <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Vamos Ahora</a>
                         </div>
                     </div>
